# fastsocket

./: LICENSE  README.md  pyproject.toml
examples/: client.py  server.py
src/fastsocket/: __init__.py  client.py  constants.py  message.py  server.py  utils.py
